<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_liste"
            android:icon="@drawable/lighthouse"
            android:title="@string/menu_list" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_propos"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_propos" />

    </group>
</menu>