<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.myapplication.ui.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_propos"
        android:name="com.example.myapplication.ui.a_propos.ProposFragment"
        android:label="@string/menu_propos"
        tools:layout="@layout/fragment_propos" />
    <fragment
        android:id="@+id/nav_liste"
        android:name="com.example.myapplication.ui.PhareFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_phare_list" />

</navigation>